platform/cluster/flux/apps/edge/traefik-ingressroutes.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: adguard
  namespace: edge-system
  annotations:
    external-dns.alpha.kubernetes.io/target: ingress.jorisjonkers.dev
    external-dns.alpha.kubernetes.io/cloudflare-proxied: 'true'
    kubernetes.io/ingress.class: traefik-public
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: 'Host(`adguard.jorisjonkers.dev`)'
      middlewares:
        - name: forward-auth
          namespace: edge-system
      services:
        - name: adguard
          namespace: utility-system
          port: 3000
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: app-ui
  namespace: edge-system
  annotations:
    external-dns.alpha.kubernetes.io/target: ingress.jorisjonkers.dev
    external-dns.alpha.kubernetes.io/cloudflare-proxied: 'true'
    kubernetes.io/ingress.class: traefik-public
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: 'Host(`jorisjonkers.dev`)'
      services:
        - name: app-ui
          namespace: app-system
          port: 80
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: assistant-api
  namespace: edge-system
  annotations:
    external-dns.alpha.kubernetes.io/target: ingress.jorisjonkers.dev
    external-dns.alpha.kubernetes.io/cloudflare-proxied: 'true'
    kubernetes.io/ingress.class: traefik-public
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: 'Host(`assistant.jorisjonkers.dev`) && PathPrefix(`/api/`) && !PathPrefix(`/api/actuator/health/`) && !Path(`/api/actuator/health`) && !Path(`/api/v1/health`)'
      middlewares:
        - name: forward-auth
          namespace: edge-system
      services:
        - name: assistant-api
          namespace: assistant-system
          port: 8082
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: assistant-api-health
  namespace: edge-system
  annotations:
    external-dns.alpha.kubernetes.io/target: ingress.jorisjonkers.dev
    external-dns.alpha.kubernetes.io/cloudflare-proxied: 'true'
    kubernetes.io/ingress.class: traefik-public
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: 'Host(`assistant.jorisjonkers.dev`) && (PathPrefix(`/api/actuator/health/`) || Path(`/api/actuator/health`) || Path(`/api/v1/health`))'
      services:
        - name: assistant-api
          namespace: assistant-system
          port: 8082
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: assistant-ui
  namespace: edge-system
  annotations:
    external-dns.alpha.kubernetes.io/target: ingress.jorisjonkers.dev
    external-dns.alpha.kubernetes.io/cloudflare-proxied: 'true'
    kubernetes.io/ingress.class: traefik-public
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: 'Host(`assistant.jorisjonkers.dev`) && !PathPrefix(`/api/`)'
      services:
        - name: assistant-ui
          namespace: assistant-system
          port: 80
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: auth-api
  namespace: edge-system
  annotations:
    external-dns.alpha.kubernetes.io/target: ingress.jorisjonkers.dev
    external-dns.alpha.kubernetes.io/cloudflare-proxied: 'true'
    kubernetes.io/ingress.class: traefik-public
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: 'Host(`auth.jorisjonkers.dev`) && PathPrefix(`/api/`)'
      services:
        - name: auth-api
          namespace: auth-system
          port: 8081
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: auth-api-well-known
  namespace: edge-system
  annotations:
    external-dns.alpha.kubernetes.io/target: ingress.jorisjonkers.dev
    external-dns.alpha.kubernetes.io/cloudflare-proxied: 'true'
    kubernetes.io/ingress.class: traefik-public
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: 'Host(`auth.jorisjonkers.dev`) && PathPrefix(`/.well-known/`)'
      services:
        - name: auth-api
          namespace: auth-system
          port: 8081
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: auth-ui
  namespace: edge-system
  annotations:
    external-dns.alpha.kubernetes.io/target: ingress.jorisjonkers.dev
    external-dns.alpha.kubernetes.io/cloudflare-proxied: 'true'
    kubernetes.io/ingress.class: traefik-public
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: 'Host(`auth.jorisjonkers.dev`) && !PathPrefix(`/api/`) && !PathPrefix(`/.well-known/`)'
      services:
        - name: auth-ui
          namespace: auth-system
          port: 80
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bazarr
  namespace: edge-system
  annotations:
    external-dns.alpha.kubernetes.io/target: ingress.jorisjonkers.dev
    external-dns.alpha.kubernetes.io/cloudflare-proxied: 'true'
    kubernetes.io/ingress.class: traefik-public
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: 'Host(`bazarr.jorisjonkers.dev`)'
      middlewares:
        - name: forward-auth
          namespace: edge-system
      services:
        - name: bazarr
          namespace: media-system
          port: 6767
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: faro
  namespace: edge-system
  annotations:
    external-dns.alpha.kubernetes.io/target: ingress.jorisjonkers.dev
    external-dns.alpha.kubernetes.io/cloudflare-proxied: 'true'
    kubernetes.io/ingress.class: traefik-public
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: 'Host(`faro.jorisjonkers.dev`)'
      services:
        - name: alloy
          namespace: observability
          port: 12347
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gatus
  namespace: edge-system
  annotations:
    external-dns.alpha.kubernetes.io/target: ingress.jorisjonkers.dev
    external-dns.alpha.kubernetes.io/cloudflare-proxied: 'true'
    kubernetes.io/ingress.class: traefik-public
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: 'Host(`status.jorisjonkers.dev`)'
      services:
        - name: gatus
          namespace: observability
          port: 80
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: edge-system
  annotations:
    external-dns.alpha.kubernetes.io/target: ingress.jorisjonkers.dev
    external-dns.alpha.kubernetes.io/cloudflare-proxied: 'true'
    kubernetes.io/ingress.class: traefik-public
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: 'Host(`grafana.jorisjonkers.dev`)'
      services:
        - name: grafana
          namespace: observability
          port: 80
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: headlamp
  namespace: edge-system
  annotations:
    external-dns.alpha.kubernetes.io/target: ingress.jorisjonkers.dev
    external-dns.alpha.kubernetes.io/cloudflare-proxied: 'true'
    kubernetes.io/ingress.class: traefik-public
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: 'Host(`dashboard.jorisjonkers.dev`)'
      middlewares:
        - name: forward-auth
          namespace: edge-system
      services:
        - name: headlamp
          namespace: utility-system
          port: 80
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: immich
  namespace: edge-system
  annotations:
    external-dns.alpha.kubernetes.io/target: ingress.jorisjonkers.dev
    external-dns.alpha.kubernetes.io/cloudflare-proxied: 'true'
    kubernetes.io/ingress.class: traefik-public
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: 'Host(`immich.jorisjonkers.dev`)'
      middlewares:
        - name: forward-auth
          namespace: edge-system
      services:
        - name: immich-server
          namespace: media-system
          port: 2283
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin
  namespace: edge-system
  annotations:
    external-dns.alpha.kubernetes.io/controller: cloudflare-ddns
    kubernetes.io/ingress.class: traefik-public
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: 'Host(`jellyfin.jorisjonkers.dev`)'
      services:
        - name: jellyfin
          namespace: media-system
          port: 8096
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyseerr
  namespace: edge-system
  annotations:
    external-dns.alpha.kubernetes.io/target: ingress.jorisjonkers.dev
    external-dns.alpha.kubernetes.io/cloudflare-proxied: 'true'
    kubernetes.io/ingress.class: traefik-public
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: 'Host(`jellyseerr.jorisjonkers.dev`)'
      services:
        - name: jellyseerr
          namespace: media-system
          port: 5055
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: knowledge-api
  namespace: edge-system
  annotations:
    external-dns.alpha.kubernetes.io/target: ingress.jorisjonkers.dev
    external-dns.alpha.kubernetes.io/cloudflare-proxied: 'true'
    kubernetes.io/ingress.class: traefik-public
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: 'Host(`kb.jorisjonkers.dev`) && !PathPrefix(`/mcp/`) && !Path(`/mcp`)'
      middlewares:
        - name: forward-auth
          namespace: edge-system
      services:
        - name: knowledge-api
          namespace: knowledge-system
          port: 8080
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: knowledge-api-mcp
  namespace: edge-system
  annotations:
    external-dns.alpha.kubernetes.io/target: ingress.jorisjonkers.dev
    external-dns.alpha.kubernetes.io/cloudflare-proxied: 'true'
    kubernetes.io/ingress.class: traefik-public
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: 'Host(`kb.jorisjonkers.dev`) && (PathPrefix(`/mcp/`) || Path(`/mcp`))'
      services:
        - name: knowledge-api
          namespace: knowledge-system
          port: 8080
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: n8n
  namespace: edge-system
  annotations:
    external-dns.alpha.kubernetes.io/target: ingress.jorisjonkers.dev
    external-dns.alpha.kubernetes.io/cloudflare-proxied: 'true'
    kubernetes.io/ingress.class: traefik-public
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: 'Host(`n8n.jorisjonkers.dev`)'
      services:
        - name: n8n
          namespace: automation-system
          port: 5678
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: obsidian-sync
  namespace: edge-system
  annotations:
    external-dns.alpha.kubernetes.io/target: ingress.jorisjonkers.dev
    external-dns.alpha.kubernetes.io/cloudflare-proxied: 'true'
    kubernetes.io/ingress.class: traefik-public
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: 'Host(`obsidian-sync.jorisjonkers.dev`)'
      services:
        - name: obsidian-livesync
          namespace: knowledge-system
          port: 5984
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prowlarr
  namespace: edge-system
  annotations:
    external-dns.alpha.kubernetes.io/target: ingress.jorisjonkers.dev
    external-dns.alpha.kubernetes.io/cloudflare-proxied: 'true'
    kubernetes.io/ingress.class: traefik-public
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: 'Host(`prowlarr.jorisjonkers.dev`)'
      middlewares:
        - name: forward-auth
          namespace: edge-system
      services:
        - name: prowlarr
          namespace: media-system
          port: 9696
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: qbittorrent
  namespace: edge-system
  annotations:
    external-dns.alpha.kubernetes.io/target: ingress.jorisjonkers.dev
    external-dns.alpha.kubernetes.io/cloudflare-proxied: 'true'
    kubernetes.io/ingress.class: traefik-public
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: 'Host(`qbittorrent.jorisjonkers.dev`)'
      middlewares:
        - name: forward-auth
          namespace: edge-system
      services:
        - name: qbittorrent
          namespace: media-system
          port: 8080
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: rabbitmq
  namespace: edge-system
  annotations:
    external-dns.alpha.kubernetes.io/target: ingress.jorisjonkers.dev
    external-dns.alpha.kubernetes.io/cloudflare-proxied: 'true'
    kubernetes.io/ingress.class: traefik-public
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: 'Host(`rabbitmq.jorisjonkers.dev`)'
      middlewares:
        - name: forward-auth
          namespace: edge-system
      services:
        - name: rabbitmq
          namespace: data-system
          port: 15672
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr
  namespace: edge-system
  annotations:
    external-dns.alpha.kubernetes.io/target: ingress.jorisjonkers.dev
    external-dns.alpha.kubernetes.io/cloudflare-proxied: 'true'
    kubernetes.io/ingress.class: traefik-public
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: 'Host(`radarr.jorisjonkers.dev`)'
      middlewares:
        - name: forward-auth
          namespace: edge-system
      services:
        - name: radarr
          namespace: media-system
          port: 7878
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr
  namespace: edge-system
  annotations:
    external-dns.alpha.kubernetes.io/target: ingress.jorisjonkers.dev
    external-dns.alpha.kubernetes.io/cloudflare-proxied: 'true'
    kubernetes.io/ingress.class: traefik-public
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: 'Host(`sonarr.jorisjonkers.dev`)'
      middlewares:
        - name: forward-auth
          namespace: edge-system
      services:
        - name: sonarr
          namespace: media-system
          port: 8989
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: stalwart
  namespace: edge-system
  annotations:
    external-dns.alpha.kubernetes.io/target: ingress.jorisjonkers.dev
    external-dns.alpha.kubernetes.io/cloudflare-proxied: 'true'
    kubernetes.io/ingress.class: traefik-public
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: 'Host(`stalwart.jorisjonkers.dev`)'
      middlewares:
        - name: forward-auth
          namespace: edge-system
      services:
        - name: stalwart
          namespace: mail-system
          port: 8080
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vault
  namespace: edge-system
  annotations:
    external-dns.alpha.kubernetes.io/target: ingress.jorisjonkers.dev
    external-dns.alpha.kubernetes.io/cloudflare-proxied: 'true'
    kubernetes.io/ingress.class: traefik-public
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: 'Host(`vault.jorisjonkers.dev`)'
      middlewares:
        - name: forward-auth
          namespace: edge-system
      services:
        - name: vault
          namespace: data-system
          port: 8200
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: wolf
  namespace: edge-system
  annotations:
    external-dns.alpha.kubernetes.io/target: ingress.jorisjonkers.dev
    external-dns.alpha.kubernetes.io/cloudflare-proxied: 'true'
    kubernetes.io/ingress.class: traefik-public
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: 'Host(`wolf.jorisjonkers.dev`)'
      middlewares:
        - name: forward-auth
          namespace: edge-system
      services:
        - name: wolfmanager
          namespace: utility-system
          port: 3000
  tls: {}
